chore: refactor ktor otel support with new declarative config support